<resources>
    <string name="app_name">LoginActivity</string>
    <string name="idText">ID</string>
    <string name="passText">PASSWORD</string>
    <string name="loginBtn">LOGIN</string>
    <string name="joinBtn">JOIN</string>
    <string name="checkBox">AUTOLOGIN</string>

    <string name="joinIdText">Join ID</string>
    <string name="IdCheckBtn">ID Check</string>
    <string name="joinPassText">Join Pass</string>
    <string name="joinPassCheckText">Join Pass Check</string>
    <string name="joinNameText">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Man</string>
    <string name="female">Woman</string>
    <string name="birth">Birth</string>
    <string name="email">Email</string>
    <string name="submitBtn">Submit</string>
    <string name="back">Back</string>
</resources>
