<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="JoinActivity"
            type="com.example.loginactivity.JoinActivity" />
    </data>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/joinIdText"
                    android:layout_width="272dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/joinIdText"
                    android:inputType="text" />

                <Button
                    android:id="@+id/idCheckBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/IdCheckBtn"
                    android:onClick="@{()-> JoinActivity.checkUserId()}" />

            </LinearLayout>

            <EditText
                android:id="@+id/joinPassText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/joinPassText"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/joinPassCheckText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/joinPassCheckText"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/joinNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/joinNameText"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/gender"
                    android:textSize="18sp" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp">

                    <RadioButton
                        android:id="@+id/maleRBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/femaleRBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />

                </RadioGroup>

            </LinearLayout>

            <EditText
                android:id="@+id/joinBirthText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth"
                android:inputType="date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/joinEmailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/submitBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/submitBtn"
                    android:onClick="@{()-> JoinActivity.insertUserData()}" />

                <Button
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back"
                    android:onClick="@{()-> JoinActivity.goToMain()}" />
            </LinearLayout>
        </LinearLayout>

</layout>