<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/idEdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/idText"
            android:inputType="text" />

        <EditText
            android:id="@+id/passEdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passText"
            tools:layout_editor_absoluteX="360dp"
            android:inputType="textPassword"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loginBtn" />

            <Button
                android:id="@+id/joinBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/joinBtn" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/autoLoginCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBox" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>